services/varnish/varnish.deploy.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: varnish
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: varnish
    spec:
      containers:
      - name: varnish
        image: pblaas/varnish4:latest
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "200m"
            memory: "300Mi"
        ports:
        - containerPort: 80
